--- a/ExampleApp/Components/App.razor
+++ b/ExampleApp/Components/App.razor
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="ExampleApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://unpkg.com/drawflow/dist/drawflow.min.css" />
-    <link rel="stylesheet" href="css/drawflowWrapper.css?v=@randomNum" />
-    <script src="js/drawflowInterop.js?v=@randomNum"></script>
+    <link rel="stylesheet" href="_content/BlazorExecutionFlow/css/drawflowWrapper.css?v=@randomNum" />
+    <script src="_content/BlazorExecutionFlow/js/drawflowInterop.js?v=@randomNum"></script>
 
     <HeadOutlet @rendermode="InteractiveServer" />
 </head>
