--- a/ExampleApp/Components/App.razor
+++ b/ExampleApp/Components/App.razor
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://unpkg.com/drawflow/dist/drawflow.min.css" />
     <link rel="stylesheet" href="_content/BlazorExecutionFlow/css/drawflowWrapper.css?v=@randomNum" />
+    <link rel="stylesheet" href="_content/BlazorExecutionFlow/css/BlazorExecutionFlow.lib.module.css?v=@randomNum" />
+    <link rel="stylesheet" href="_content/BlazorExecutionFlow/BlazorExecutionFlow.bundle.scp.css?v=@randomNum" />
     <script src="_content/BlazorExecutionFlow/js/drawflowInterop.js?v=@randomNum"></script>
 
     <HeadOutlet @rendermode="InteractiveServer" />
