--- a/BlazorExecutionFlow/Components/BlazorExecutionFlowGraph.razor
+++ b/BlazorExecutionFlow/Components/BlazorExecutionFlowGraph.razor
@@ -260,8 +260,11 @@
 
     void HandleNodeError(object? sender, NodeErrorEventArgs e)
     {
-        _ = SetStatusAsync(e.Node.DrawflowNodeId, false, true, e.Message);
-        Console.WriteLine($"Node Error: {e.Message}");
+        _ = InvokeAsync(async () =>
+        {
+            await SetStatusAsync(e.Node.DrawflowNodeId, false, true, e.Message);
+            Console.WriteLine($"Node Error: {e.Message}");
+        });
         // Error is stored in the node, execution continues
     }
 
@@ -289,7 +292,7 @@
     {
         if (sender is Node node)
         {
-            _ = SetStatusAsync(node.DrawflowNodeId, true);
+            _ = InvokeAsync(async () => await SetStatusAsync(node.DrawflowNodeId, true));
         }
     }
 
@@ -297,7 +300,7 @@
     {
         if (sender is Node node)
         {
-            _ = SetStatusAsync(node.DrawflowNodeId, false);
+            _ = InvokeAsync(async () => await SetStatusAsync(node.DrawflowNodeId, false));
         }
     }
 
